# tech_stand_phase_2

./: .env.example  .gitignore  Architecture.md  GEN-OP-17_review_findings.md  PROJECT_REVIEW.md  PROJECT_SUMMARY.md  WEEKLY_SUMMARY.md  _commit_msg.txt  audit-pack-demo.docx  cleansing_agent.md  conflict_agent.md  formatting_agent.md  human findings.md  main.py  pipeline_overview.md  pyproject.toml  readme.md  requirements.txt  risk_agent.md  sequencing Agent.md  sharepoint_schema.md  specifier agent.md  test_result.json  test_result_goods_in.json  test_result_goods_in.md  test_result_internal_audit.json  test_result_internal_audit.md  test_result_packaging_principle.json  test_result_packaging_principle.md  test_result_vehicle_loading.json  test_result_vehicle_loading.md  validation_agent.md  workato_recipe_spec.md
docs/: BACKLOG.md  CHANGES_IMPACT_ANALYSIS.md  CRANSWICK_AI_AGENT_GOVERNANCE_STANDARD.md  DOC_BUILDER.md  PHASE3_PLUMBING.md  ingest_api.md  site_standard_links.md  supabase_setup.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
sample_docs/: FSP003 VEHICLE LOADING & UNLOADING PROCEDURE.doc  FSP048 XRAY (CCP)  PROCEDURE V12.docx  FSP74 Online packaging and labelling procedure v14.docx  GEN-OP-01 Goods In Procedure~Issue#22~28-01-2022.doc  GEN-OP-17 Internal Auditing Procedure~Issue#12~12-06-2025.docx  README.md  forignbodyprevention.txt  sample_sop.docx  sample_sop.txt
scripts/: backfill_document_registry.py  build_goods_in_report.py  check_analysis_sessions_storage.py  clear_sops_and_reset_metrics.py  (+22 more)
(+109 files in other folders)
